--- a/index.html
+++ b/index.html
@@ -357,105 +357,92 @@
                         </ul>
                         <div class="gallery-masonry row no-gutters">
                             <div class="col-md-4 col-sm-6 masonry-item webapp">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/01_r_trade.png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/mahalaxami.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/01_r_trade.png" alt="gallery">
+                                    <img src="assets/img/portfolio/mahalaxami.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
                                         <span class="cats">Web Application</span>
-                                    <span class="title">R-Trade</span>
+                                    <span class="title">Mahalaxami Life Insurance</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item webapp">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/02_med_online.png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/sunway.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/02_med_online.png" alt="gallery">
+                                    <img src="assets/img/portfolio/sunway.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
                                         <span class="cats">Web Application</span>
-                                    <span class="title">Med Online</span>
+                                    <span class="title">Sunway College</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item mobileapp">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/03_budget.png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/sm_college.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/03_budget.png" alt="gallery">
+                                    <img src="assets/img/portfolio/sm_college.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
-                                        <span class="cats">Mobile Application</span>
-                                    <span class="title">Budget Pharmacare</span>
+                                        <span class="cats">Web Application</span>
+                                    <span class="title">SM college</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item Bulksms webdesign">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/04_kolmed (2).png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/the global.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/04_kolmed (2).png" alt="gallery">
+                                    <img src="assets/img/portfolio/the global.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
                                         <span class="cats">E-commerce</span>
-                                    <span class="title">Kolmed Kochi</span>
+                                    <span class="title">The Global Nepal</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item Bulksms webdesign">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/05_rightmed (2).png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/sewa_foundation.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/05_rightmed (2).png" alt="gallery">
+                                    <img src="assets/img/portfolio/sewa_foundation.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
-                                        <span class="cats">E-commerce</span>
-                                    <span class="title">Rightmed</span>
+                                        <span class="cats">Web Application</span>
+                                    <span class="title">Sewa Foundation</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item webdesign">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/06_janet (2).png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/geology.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/06_janet (2).png" alt="gallery">
+                                    <img src="assets/img/portfolio/geology.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
                                         <span class="cats">Web Design</span>
-                                    <span class="title">Janet Healthcare</span>
+                                    <span class="title">Nepal Geological Society</span>
                                     </span>
                                     </span>
                                 </a>
                             </div>
                             <div class="col-md-4 col-sm-6 masonry-item mobileapp">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/07_bookmyslot.png">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/department_of_zoology.png">
                                     <span class="thumb">
-                                    <img src="assets/img/portfolio/07_bookmyslot.png" alt="gallery">
+                                    <img src="assets/img/portfolio/department_of_zoology.png" alt="gallery">
                                 </span>
                                     <span class="content-wrap">
                                     <span class="content">
-                                        <span class="cats">Mobile Application</span>
-                                    <span class="title">Book My Slot</span>
-                                    </span>
-                                    </span>
-                                </a>
-                            </div>
-                            <div class="col-md-4 col-sm-6 masonry-item mobileapp">
-                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/08_panchayath.png">
-                                    <span class="thumb">
-                                    <img src="assets/img/portfolio/08_panchayath.png" alt="gallery">
-                                </span>
-                                    <span class="content-wrap">
-                                    <span class="content">
-                                        <span class="cats">Mobile Application</span>
-                                    <span class="title">Mangattidam Panchayath</span>
+                                        <span class="cats">Web Application</span>
+                                    <span class="title">Central Department of Geology</span>
                                     </span>
                                     </span>
                                 </a>
