fixed slider of website

--- a/index.html
+++ b/index.html
@@ -128,8 +128,8 @@
                         <div class="col-xl-5 col-lg-6 col-md-6 offset-xl-1">
                             <div class="header-inner-details">
                                 <div class="header-inner">
-                                    <h1 class="title s-animate-1"> Creative, Stunning <span>Web Design</span> & Bulksms</h1>
-                                    <p class="s-animate-2">Need a website for a new business or wish to upgrade the existing website? <br> Our team of creative web designers are at your service.</p>
+                                    <h1 class="title s-animate-1"> Creative, Stunning <span>Web Design</span> & Bulk SMS</h1>
+                                    <p class="s-animate-2">Need a website for a new business or wish to upgrade the existing website <br> Our team of creative web designers are at your service.</p>
                                     <div class="btn-wrapper desktop-left padding-top-20">
                                         <a href="#services" class="btn btn-radius btn-green s-animate-3">Read More</a>
                                     </div>
@@ -313,7 +313,7 @@
                     <div class="single-service wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="assets/img/icons/services/icon_branding.svg" alt="service">
                         <h6>
-                            <a href="#">Bulksms</a>
+                            <a href="#">Bulk SMS</a>
                         </h6>
                         <p>We help you to reach and Communicate to more people instantly,Grow your Business with individual SMS Marketing </p>
                         <div class="read-more">
