commented client area

--- a/about.html
+++ b/about.html
@@ -66,7 +66,7 @@
             </ul>
         </div>
         <div class="logo-Pihu technologies">
-            <img src="assets/img/Pihu technologies_flat_logo.png" alt="logo">
+            <img src="assets/logo.png" alt="logo">
         </div>
     </div>
 
@@ -76,8 +76,7 @@
             <div class="responsive-mobile-menu">
                 <div class="logo-wrapper mobile-logo">
                     <a href="index.html" class="logo">
-                        <img class="main-logo" src="assets/img/Pihu technologies_flat_logo.png" alt="logo">
-                        <img class="sticky-logo" src="assets/img/Pihu technologies_logo_03_small.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <button class="sidemenu">
@@ -89,8 +88,7 @@
             <div class="collapse navbar-collapse" id="Pihu technologies_main_menu">
                 <div class="logo-wrapper desktop-logo">
                     <a href="index.html" class="logo">
-                        <img class="main-logo" src="assets/img/Pihu technologies_flat_logo.png" alt="logo">
-                        <img class="sticky-logo" src="assets/img/Pihu technologies_logo_03_small.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <ul class="navbar-nav">
@@ -517,7 +515,7 @@
                 <div class="col-xl-8 col-lg-11">
                     <div class="section-title style-five text-center">
                         <h2 class="title">Frequently <span>Asked Questions</span></h2>
-                        <p class="sub-title">Call us at +977 9818237209 or email us info@Pihu technologiesnologies.com</p>
+                        <p class="sub-title">email us info@pihutechologies.com.np</p>
                     </div>
                     <div class="accordion style-two accordion-h-five" id="accordion">
                         <!-- single accordion -->
@@ -621,8 +619,9 @@
                             <h4 class="widget-title">Contact</h4>
                             <div class="contact_info_list">
                                 <p class="contact-content">B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p><span>Phone:</span> +977 01-4793365/4794145</p>
                                 <p><span>Mobile:</span> +977 9818237209</p>
-                                <p><span>E-mail:</span> info@pihutechologies.com </p>
+                                <p><span>E-mail:</span> info@pihutechologies.com.np/techpihu@gmail.com</p>
                             </div>
                         </div>
                     </div>
