--- a/career-details-exc.html
+++ b/career-details-exc.html
@@ -68,7 +68,7 @@
             </ul>
         </div>
         <div class="logo-pihutech">
-            <img src="assets/img/pihutech_flat_logo.png" alt="logo">
+            <img src="assets/logo.png" alt="logo">
         </div>
     </div>
 
@@ -78,7 +78,7 @@
             <div class="responsive-mobile-menu">
                 <div class="logo-wrapper mobile-logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/img/pihutech_logo_03_small.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <button class="sidemenu">
@@ -90,7 +90,7 @@
             <div class="collapse navbar-collapse" id="pihutech_main_menu">
                 <div class="logo-wrapper desktop-logo">
                     <a href="index.html" class="logo">
-                        <img src="assets/img/pihutech_logo_03_small.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <ul class="navbar-nav">
@@ -242,8 +242,9 @@
                             <h4 class="widget-title">Contact</h4>
                             <div class="contact_info_list">
                                 <p class="contact-content">B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p><span>Phone:</span> +977 01-4793365/4794145</p>
                                 <p><span>Mobile:</span> +977 9818237209</p>
-                                <p><span>E-mail:</span> info@pihutechologies.com </p>
+                                <p><span>E-mail:</span> info@pihutechologies.com.np/techpihu@gmail.com</p>
                             </div>
                         </div>
                     </div>
