--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <title>Pihu Technologies Pvt. Ltd. | Web Development Company in Kathmandu | Domain | Hosting | E-commerce | Mobile Application | Bulk SMS </title>
     <meta name="geo.placename" content="Kathmandu,Nepal">
     <!-- favicon -->
-    <link rel=icon href="#" sizes="20x20" type="image/png">
+    <link rel=icon href="assets/logo.png" sizes="20x20" type="image/png">
     <!-- Links -->
     <link rel="stylesheet" href="assets/css/animate.css">
     <link rel="stylesheet" href="assets/css/bootstrap.min.css">
@@ -31,7 +31,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="Pihu Technologies Pvt. Ltd." />
     <meta property="og:description" content="Pihu Technologies Pvt. Ltd. is leading Webiste design and development, Android Application,Domain Registeration,Hosting services, ERP Software Application and Digital Marketing Company in Kathmandu ,Nepal with a branch office in Dhangadhi">
-    <meta property="og:url" content="https://www.pihutechnologies.com/" />
+    <meta property="og:url" content="https://www.pihutechnologies.com.np/" />
     <meta property="og:image" content="#">
     <meta property="og:image:type" content="image/png">
     <meta property="og:image:width" content="520">
@@ -71,8 +71,7 @@
             </ul>
         </div>
         <div class="logo-pihutech">
-            <h1>Pihu's Logo</h1>
-            <!-- <img src="assets/img/pihutech_flat_logo.png" alt="logo"> -->
+            <img src="assets/logo.png" alt="logo">
         </div>
     </div>
 
@@ -82,8 +81,7 @@
             <div class="responsive-mobile-menu">
                 <div class="logo-wrapper mobile-logo">
                     <a href="index.html" class="logo">
-                        <h6>Pihu's Logo</h1>
-                            <!-- <img src="assets/img/pihutech_logo_03_small.png" alt="logo"> -->
+                        <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <button class="sidemenu">
@@ -95,8 +93,8 @@
             <div class="collapse navbar-collapse" id="pihutech_main_menu">
                 <div class="logo-wrapper desktop-logo">
                     <a href="index.html" class="logo">
-                        <h6>Pihu's Logo</h1>
-                            <!-- <img src="assets/img/pihutech_logo_03_small.png" alt="logo"> -->
+                        <!-- <h6>Pihu's Logo</h1> -->
+                            <img src="assets/logo.png" alt="logo">
                     </a>
                 </div>
                 <ul class="navbar-nav">
@@ -282,8 +280,8 @@
                 <div class="col-xl-4 col-lg-4 col-md-6 col-sm-6">
                     <div class="single-service wow animated fadeInUp" data-wow-duration="0.6s" data-wow-delay="0.2s">
                         <img src="assets/img/icons/services/icon_ecommerce_dev.svg" alt="service">
-                        <h6><a href="#">Ecommerce Development</a></h6>
-                        <p>We make things happen for those who wish to sell online. We use the best and most flexible ecommerce platforms for this. </p>
+                        <h6><a href="#">Domain Registeration and Hosting Service</a></h6>
+                        <p>Register your domain and an excellent hosting service with us without any hassle </p>
                         <div class="read-more">
                             <a href="#contact"><img src="assets/img/service/arrow.png" alt="arrow"></a>
                         </div>
@@ -313,11 +311,11 @@
                     <div class="single-service wow animated fadeInUp" data-wow-duration="1s" data-wow-delay="0.4s">
                         <img src="assets/img/icons/services/icon_branding.svg" alt="service">
                         <h6>
-                            <a href="#">Bulk SMS</a>
+                            <a href="https://www.pihusms.com/">Bulk SMS</a>
                         </h6>
                         <p>We help you to reach and Communicate to more people instantly,Grow your Business with individual SMS Marketing </p>
                         <div class="read-more">
-                            <a href="#contact"><img src="assets/img/service/arrow.png" alt="arrow"></a>
+                            <a href="https://www.pihusms.com/"><img src="assets/img/service/arrow.png" alt="arrow"></a>
                         </div>
                     </div>
                 </div>
@@ -447,6 +445,19 @@
                                     </span>
                                 </a>
                             </div>
+                            <div class="col-md-4 col-sm-6 masonry-item mobileapp">
+                                <a class="single-work-item text-center" data-effect="mfp-zoom-in" href="assets/img/portfolio/darshan.png">
+                                    <span class="thumb">
+                                    <img src="assets/img/portfolio/darshan.png" alt="gallery">
+                                </span>
+                                    <span class="content-wrap">
+                                    <span class="content">
+                                        <span class="cats">Web Application</span>
+                                    <span class="title">Darshan Solutions</span>
+                                    </span>
+                                    </span>
+                                </a>
+                            </div>
                         </div>
                     </div>
                 </div>
@@ -500,7 +511,7 @@
         </div>
     </div>
     <!-- client area start -->
-    <div class="client-area pd-top-110">
+    <!-- <div class="client-area pd-top-110">
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-xl-6 col-lg-9">
@@ -554,7 +565,7 @@
             </div>
         </div>
     </div>
-    <!-- client area End -->
+    client area End -->
     <!-- contact form start -->
     <div id="contact" class="contact-form-area pd-top-112">
         <div class="container">
@@ -619,10 +630,10 @@
                     <div class="col-lg-4 desktop-center-item">
                         <div>
                             <div class="contact-info">
-                                <h4 class="title mb-3">Contact Info:</h4>
-                                <p><span>Address:</span> B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p class="contact-content">B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p><span>Phone:</span> +977 01-4793365/4794145</p>
                                 <p><span>Mobile:</span> +977 9818237209</p>
-                                <p><span>E-mail:</span> info@pihutechologies.com</p>
+                                <p><span>E-mail:</span> info@pihutechologies.com.np/techpihu@gmail.com</p>
                             </div>
                         </div>
                     </div>
@@ -667,8 +678,9 @@
                             <h4 class="widget-title">Contact</h4>
                             <div class="contact_info_list">
                                 <p class="contact-content">B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p><span>Phone:</span> +977 01-4793365/4794145</p>
                                 <p><span>Mobile:</span> +977 9818237209</p>
-                                <p><span>E-mail:</span> info@pihutechologies.com </p>
+                                <p><span>E-mail:</span> info@pihutechologies.com.np/techpihu@gmail.com</p>
                             </div>
                         </div>
                     </div>
