--- a/contact.html
+++ b/contact.html
@@ -67,7 +67,7 @@
             </ul>
         </div>
         <div class="logo-pihutech">
-            <img src="assets/img/pihutech_flat_logo.png" alt="logo">
+            <img src="assets/logo.png" alt="logo">
         </div>
     </div>
 
@@ -77,9 +77,8 @@
             <div class="responsive-mobile-menu">
                 <div class="logo-wrapper mobile-logo">
                     <a href="index.html" class="logo">
-                        <img class="main-logo" src="assets/img/pihutech_flat_logo.png" alt="logo">
-                        <img class="sticky-logo" src="assets/img/pihutech_logo_03_small.png" alt="logo">
-                    </a>
+                        <img src="assets/logo.png" alt="logo">
+                                            </a>
                 </div>
                 <button class="sidemenu">
                     <span class="line"></span>
@@ -90,8 +89,7 @@
             <div class="collapse navbar-collapse" id="pihutech_main_menu">
                 <div class="logo-wrapper desktop-logo">
                     <a href="index.html" class="logo">
-                        <img class="main-logo" src="assets/img/pihutech_flat_logo.png" alt="logo">
-                        <img class="sticky-logo" src="assets/img/pihutech_logo_03_small.png" alt="logo">
+                        <img src="assets/logo.png" alt="logo">                    
                     </a>
                 </div>
                 <ul class="navbar-nav">
@@ -196,9 +194,10 @@
                         <div>
                             <div class="contact-info">
                                 <h4 class="title mb-3">Contact Info:</h4>
-                                <p><span>Address:</span> B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p class="contact-content">B-4, Fourth Floor, A- Block Stupa Apartments, Rudramati Marg, Buddhanagar-10, Kathmandu, Nepal </p>
+                                <p><span>Phone:</span> +977 01-4793365/4794145</p>
                                 <p><span>Mobile:</span> +977 9818237209</p>
-                                <p><span>E-mail:</span> info@pihutechologies.com</p>
+                                <p><span>E-mail:</span> info@pihutechologies.com.np/techpihu@gmail.com</p>
                             </div>
                         </div>
                     </div>
